# better-manager

./: .env.example  .gitignore  00-CHECKLIST.md  01-PROJECT-OVERVIEW.md  02-ARCHITECTURE.md  03-BACKEND-GUIDE.md  04-PROXY-SERVER.md  05-ROUTING-SYSTEM.md  06-FRONTEND-GUIDE.md  07-DATABASE.md  08-QUICK-START.md  09-IMPROVEMENTS.md  10-IMPLEMENTATION-PLAN.md  COMMIT_SUMMARY.md  COMPLETE_STREAMING_FILE.md  COMPLETE_SUMMARY.md  Cargo.toml  EXECUTION_PLAN_UPDATE.md  OPENAI_HANDLER_COMPLETE.ts  PROVIDER_IMPLEMENTATION.md  QUICK_START_PROVIDERS.md  README.md  STREAMING_IMPLEMENTATION.md  STREAMING_REFERENCE.md  data.db-shm  data.db-wal  drizzle.config.ts  execution-plan.md  fixing-thefuckingproblem.md  package-lock.json  package.json  tsconfig.json
docs/: PROVIDERS.md  architecture.md  changelog.md  project_status.md
drizzle/: 0000_romantic_lorna_dane.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/: index.html  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  i18n.ts
frontend/src/api/: accounts.ts  client.ts  config.ts  mappings.ts  monitor.ts  (+2 more)
src/: index.ts  lib.rs  main.rs
src/api/: accounts.rs  accounts.ts  config.rs  config.ts  mappings.ts  mod.rs  monitor.rs  monitor.ts  providers.ts  routes.rs  state.rs
src/auth/: google.rs  google.ts  mod.rs  routes.ts
src/config/: mod.rs  settings.rs  settings.ts
src/db/: accounts.rs  config.rs  connection.rs  index.ts  migrations.rs  mod.rs  models.rs  monitor.rs  schema.ts
src/proxy/: errors.ts  index.ts  mod.rs  rate-limiter.ts  session-manager.ts  token-manager.ts  types.ts  upstream.ts
(+35 files in other folders)
