[package]
name = "better-manager"
version = "0.1.0"
edition = "2021"
authors = ["nagara"]
description = "A lightweight AI account manager and protocol proxy"
license = "MIT"
repository = "https://github.com/nagara/better-manager"
keywords = ["ai", "proxy", "gemini", "claude", "openai"]
categories = ["web-programming", "network-programming"]

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Async runtime (minimal features)
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "fs", "signal", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
open = "5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
